--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <tbody>
         <tr>
             <td><a target="_blank" href="https://www.gujarattitansipl.com/players">
-                <img height="100" width="100" src="../asserts/GT.avif"></img></a>
+                <img height="100" width="100" src="../asserts/GT.avif"></a>
 
             </td>
             <td>GT</td>
@@ -51,7 +51,7 @@
         </tr>
         <tr>
             <td><a target="_blank" href="https://www.geeksforgeeks.org/csk-players-list/">
-                <img height="100" width="100" src="../asserts/CSK.png"></img></a></td>
+                <img height="100" width="100" src="../assert/CSK.png"></a></td>
             <td>CSK</td>
             <td>13</td>
             <td>7</td>
@@ -61,7 +61,7 @@
         </tr>
         <tr>
             <td><a target="_blank" href="https://www.crictracker.com/cricket-news/lsg-team-2023">
-                <img height="100" width="100" src="../asserts/LPG.jpg"></img></td>
+                <img height="100" width="100" src="../asserts/LPG.jpg"></td>
             <td>LSG</td>
             <td>13</td>
             <td>7</td>
@@ -71,7 +71,7 @@
         </tr>
         <tr>
             <td><a target="_blank" href="https://www.iplt20.com/teams/royal-challengers-bangalore">
-                <img height="100" width="100" src="../asserts/RCB.png"></img></td>
+                <img height="100" width="100" src="../asserts/RCB.png"></td>
             <td>RCB</td>
             <td>13</td>
             <td>7</td>
