--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </tr>
         <tr>
             <td><a target="_blank" href="https://www.geeksforgeeks.org/csk-players-list/">
-                <img height="100" width="100" src="../assert/CSK.png"></a></td>
+                <img height="100" width="100" src="./CSK.png"></a></td>
             <td>CSK</td>
             <td>13</td>
             <td>7</td>
